Fix text wrap

--- a/scss/utilites/_text.scss
+++ b/scss/utilites/_text.scss
@@ -6,4 +6,4 @@
 
 // Alignment
 
-.text-wrap   { white-space: wrap !important; }
+.text-wrap   { white-space: normal !important; }
